--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                         </th>
                     </tr>
                 </table>
+                <div></div>
             </div>
         </nav>
     </main>
