rough draft website for Tech Club with CSS

--- a/index.html
+++ b/index.html
@@ -4,26 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./stylesCSS/index.css">
     <title>NVCC Tech Club</title>
 </head>
 <body>
     <main>
-        <nav>
-            <div class="card">
-                <h1>NVCC Tech Club</h1>
-                <table>
-                    <tr>
-                        <th>
-                            <a href="../techClub/videos.html">Videos</a>
-                            <a href="../techClub/resources.html">Resources</a>
-                            <a href="../techClub/gallery.html">Gallery</a>
-                            <a href="../techClub/about.html">About Us</a>
-                        </th>
-                    </tr>
-                </table>
-                <div></div>
+        <div class="card">
+            <div class="wrap">
+                <div class="headerOne">
+                    <!-- <h1>NVCC</h1> -->
+                    <h1>Tech Club</h1>
+                </div>
+                <nav>
+                    <table>
+                        <tr>
+                            <th>
+                                <a href="../techClub/videos.html">Videos</a>
+                                <a href="../techClub/resources.html">Resources</a>
+                                <a href="../techClub/gallery.html">Gallery</a>
+                                <a href="../techClub/about.html">About Us</a>
+                            </th>
+                        </tr>
+                    </table>
+                </nav>
+                <footer>
+                    <div class="links">
+                        <a id="youtube" href="https://youtube.com/"><img src="./imageGallery/YouTube_social_white_squircle.svg" alt="YouTube" width="50"></a>
+                        <a id="discord" href="https://discord.com/"><img src="./imageGallery/discord-mark-blue.svg" alt="discord" width="65"></a>
+                        <a id="twitter" href="https://twitter.com"><img src="./imageGallery/Twitter-logo.svg" alt="twitter" width="60"></a>
+                        <a id="instagram" href="https://instagram.com/"><img src="./imageGallery/Instagram_logo_2016.svg" alt="instagram" width="60"></a>
+                    </div>
+                </footer>
             </div>
-        </nav>
+        </div>
     </main>
 </body>
 </html>
