--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="card">
             <div class="wrap">
                 <div class="headerOne">
-                    <!-- <h1>NVCC</h1> -->
+                    <h1>NVCC</h1>
                     <h1>Tech Club</h1>
                 </div>
                 <nav>
