--- a/resources.html
+++ b/resources.html
@@ -11,6 +11,7 @@
         <div class="card">
             <div class="links">
                 <a href="https://medium.com/discord-bots/making-a-basic-discord-bot-with-java-834949008c2b">discord bot with Java</a>
+                <a href="https://api.slack.com/start/building/bolt-python">python slack app</a>
             </div>
         </div>
     </main>
