--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
                 </nav>
                 <footer>
                     <div class="links">
-                        <a id="youtube" href="https://youtube.com/"><img src="./imageGallery/YouTube_social_white_squircle.svg" alt="YouTube" width="50"></a>
-                        <a id="discord" href="https://discord.com/"><img src="./imageGallery/discord-mark-blue.svg" alt="discord" width="65"></a>
-                        <a id="twitter" href="https://twitter.com"><img src="./imageGallery/Twitter-logo.svg" alt="twitter" width="60"></a>
-                        <a id="instagram" href="https://instagram.com/"><img src="./imageGallery/Instagram_logo_2016.svg" alt="instagram" width="60"></a>
+                        <a href="https://youtube.com/"id="youtube" target="_blank"  rel="noopener"><img src="./imageGallery/YouTube_social_white_squircle.svg" alt="YouTube" width="50"></a>
+                        <a href="https://www.linkedin.com/groups/12781377/" id="linkedin" target="_blank"  rel="noopener"><img src="./imageGallery/LI-In-Bug.png" alt="LinkedIn" width="40"></a>
+                        <a href="https://discord.com/"id="discord" target="_blank"  rel="noopener"><img src="./imageGallery/discord-mark-blue.svg" alt="discord" width="50"></a>
+                        <a href="https://instagram.com/"id="instagram" target="_blank"  rel="noopener"><img src="./imageGallery/Instagram_logo_2016.svg" alt="instagram" width="50"></a>
+                        <a href="https://twitter.com"id="twitter" target="_blank"  rel="noopener"><img src="./imageGallery/Twitter-logo.svg" alt="twitter" width="50"></a>
                     </div>
                 </footer>
             </div>
