--- a/resources.html
+++ b/resources.html
@@ -4,14 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./stylesCSS/resources.css">
     <title>Resources</title>
 </head>
 <body>
     <main>
         <div class="card">
-            <div class="links">
-                <a href="https://medium.com/discord-bots/making-a-basic-discord-bot-with-java-834949008c2b">discord bot with Java</a>
-                <a href="https://api.slack.com/start/building/bolt-python">python slack app</a>
+            <div class="wrap">
+                <nav>
+                    <table>
+                        <tr>
+                            <th>
+                                <a href="../techClub/index.html">Home</a>
+                                <a href="../techClub/videos.html">Videos</a>
+                                <a href="../techClub/resources.html">Resources</a>
+                                <a href="../techClub/gallery.html">Gallery</a>
+                                <a href="../techClub/about.html">About Us</a>
+                            </th>
+                        </tr>
+                    </table>
+                </nav>
+                <div class="links">
+                    <h2>Bot building</h2>
+                    <a href="https://medium.com/discord-bots/making-a-basic-discord-bot-with-java-834949008c2b">discord bot with Java</a>
+                    <a href="https://api.slack.com/start/building/bolt-python">python slack app</a>
+                </div>
+                <div>
+                    <h2>The basics refresher</h2>
+                    <a href="https://www.tutorialspoint.com/basics_of_computers/index.htm">Basics of Computers by Tutorialspoint</a>
+                    <a href="https://www.youtube.com/watch?v=-M6lANfzFsM">History of Computing by Futurology</a>
+                    <a href="https://learning.edx.org/course/course-v1:HarvardX+CS50+X/home">Introduction to Computer Science by HarvardX</a>
+                </div>
             </div>
         </div>
     </main>
