--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </nav>
                 <footer>
                     <div class="links">
-                        <a href="https://youtube.com/"id="youtube" target="_blank"  rel="noopener"><img src="./imageGallery/YouTube_social_white_squircle.svg" alt="YouTube" width="50"></a>
+                        <a href="https://www.youtube.com/channel/UCoOG2KI_BT8gKI-YOz1wrUg/"id="youtube" target="_blank"  rel="noopener"><img src="./imageGallery/YouTube_social_white_squircle.svg" alt="YouTube" width="50"></a>
                         <a href="https://www.linkedin.com/groups/12781377/" id="linkedin" target="_blank"  rel="noopener"><img src="./imageGallery/LI-In-Bug.png" alt="LinkedIn" width="40"></a>
                         <a href="https://discord.gg/bwmrmzNcHF"id="discord" target="_blank"  rel="noopener"><img src="./imageGallery/discord-mark-blue.svg" alt="discord" width="50"></a>
                         <a href="https://instagram.com/"id="instagram" target="_blank"  rel="noopener"><img src="./imageGallery/Instagram_logo_2016.svg" alt="instagram" width="50"></a>
